# 10grade-christmas-luck-pattern-coders

./: .gitattributes  .gitignore  .gitkeep  CMakeLists.txt  README.md
assets/: appIcon.rc  main.ui  resources.qrc  words.csv
assets/ui/: Application.qml  MainPage.qml  Message.qml  Pagination.qml  Spacer.qml  StartingPage.qml  Tag.qml  TagEditPopup.qml  WordPage.qml  WordPage.qml.autosave  WordRectangle.qml  main.qml
docs/: PATTERN CODERS.docx  pattern coders.pptx
include/: algorithms.h  algorithms.h~  api.h  application.h  arrayModificationInfo.h  backend.h  cache.h  fileManager.h  message.h  notifications.h  parser.h  scrapper.h  tags.h  tagsUi.h  word.h  wordAlgorithms.h  wordUi.h
include/scrapping/: parser.h  scrapper.h
src/: algorithms.cpp  api.cpp  application.cpp  fileManager.cpp  main.cpp  parser.cpp  scrapper.cpp  tags.cpp  tagsUi.cpp  word.cpp  wordAlgorithms.cpp  wordUi.cpp
src/scrapping/: main.cpp  parser.cpp  scrapper.cpp
tests/: CMakeLists.txt  test.cpp  testFunctions.cpp  testFunctions.h  testJsonFile.json  testing.h
